k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-pod
  template:
    metadata:
      name: api-pod
      labels:
        app: api-pod
    spec:
      containers:
        - name: incantogamus-node
          image: incantogamus-node
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
          imagePullPolicy: Never
          command: ["/app/run.sh"]
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-pod
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
